<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/black">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_logotwo"
        android:contentDescription="@string/logo" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@android:color/darker_gray"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_below="@id/username"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@android:color/darker_gray"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/login"
        android:textColor="#000000" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/register"
        android:textColor="#000000" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_below="@id/google_sign_in_button"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_with_facebook"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/facebook_login_button"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
